--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "axios": "^1.9.0",
+    "framer-motion": "^12.23.0",
     "lucide-react": "^0.514.0",
     "mathjs": "^14.5.0",
     "react": "^18.2.0",
